# DailyNewz

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
src/daily_digest_bot/: __init__.py  __main__.py  config.py  dedupe.py  emailer.py  feeds.py  main.py  ranker.py  render.py
tests/: test_dedupe.py  test_ranker.py
